milestone 2: navigatie aangepast

--- a/examenproject/html/Productoverzicht.html
+++ b/examenproject/html/Productoverzicht.html
@@ -11,7 +11,7 @@
     <nav>
         <h2>Menu</h2>
         <ul>
-            <li><a href="http://localhost:63342/UI1_GIT/examenproject/index.html?_ijt=njl7n1rb69532uvc4deokdt8su&_ij_reload=RELOAD_ON_SAVE">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href=Producten.html>Producten</a></li>
             <li><a href="Personalisering.html">Personalisering</a></li>
             <li><a href="Contact.html">Contact</a></li>
