--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -12,19 +12,19 @@
         <h3>Menu</h3>
         <ul>
             <li>
-                <a href="http://localhost:63342/UI1_GIT/examenproject/index.html?_ijt=njl7n1rb69532uvc4deokdt8su&_ij_reload=RELOAD_ON_SAVE">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li>
-                <a href="http://localhost:63342/UI1_GIT/examenproject/html/Producten.html?_ijt=njl7n1rb69532uvc4deokdt8su&_ij_reload=RELOAD_ON_SAVE">Producten</a>
+                <a href="html/Producten.html">Producten</a>
             </li>
             <li>
-                <a href="http://localhost:63342/UI1_GIT/examenproject/html/Personalisering.html?_ijt=njl7n1rb69532uvc4deokdt8su">Personalisering</a>
+                <a href="html/Personalisering.html">Personalisering</a>
             </li>
             <li>
-                <a href="http://localhost:63342/UI1_GIT/examenproject/html/Contact.html?_ijt=njl7n1rb69532uvc4deokdt8su&_ij_reload=RELOAD_ON_SAVE">Contact</a>
+                <a href="html/Contact.html">Contact</a>
             </li>
             <li>
-                <a href="http://localhost:63342/UI1_GIT/examenproject/html/FAQ.html?_ijt=njl7n1rb69532uvc4deokdt8su&_ij_reload=RELOAD_ON_SAVE">FAQ</a>
+                <a href="html/FAQ.html">FAQ</a>
             </li>
         </ul>
     </nav>
