--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -2,33 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    . N ars meps verhaart Meijer Negen negen e
     <title>Home</title>
 </head>
 <body>
 <h1>Home</h1>
-<header>
+<section>
     <h2>Home</h2>
-    <nav>
-        <h3>Menu</h3>
-        <ul>
-            <li>
-                <a href="./index.html">Home</a>
-            </li>
-            <li>
-                <a href="html/Producten.html">Producten</a>
-            </li>
-            <li>
-                <a href="html/Personalisering.html">Personalisering</a>
-            </li>
-            <li>
-                <a href="html/Contact.html">Contact</a>
-            </li>
-            <li>
-                <a href="html/FAQ.html">FAQ</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <h3>Menu</h3>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="html/Producten.html">Producten</a>
+                </li>
+                <li>
+                    <a href="html/Personalisering.html">Personalisering</a>
+                </li>
+                <li>
+                    <a href="html/Contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="html/FAQ.html">FAQ</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+</section>
 <main>
     <h2>mijn product</h2>
     <img src="media/toetsenbord_opt.jpg" alt="toetsenbord">
@@ -39,16 +42,19 @@
     <section>
         <h3>getuigenis 1</h3>
         <p>Voor ik deze webshop had gevonden had ik problemen met het zoeken naar een goede toetsenbord.</p>
-        <p>ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen gingen steeds eruit.</p>
-        <p>Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden en special voor mezelf personaliseren.</p>
+        <p>ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen gingen
+            steeds eruit.</p>
+        <p>Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden en
+            special voor mezelf personaliseren.</p>
         <p></p>
         <h3>getuigenis 2</h3>
-        <p>Het beste vindt ik dat er verschillende producten zijn waardoor ik direct de perfecte product voor mij kan vinden.</p>
+        <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor mij kan
+            vinden.</p>
         <p>Ik vond het ook handig dat ik het kon aanpassen aan mijn eigen stijl.</p>
         <p>En het is ook handig als je iemand een cadeau wilt geven</p>
         <h3>getuigenis 3</h3>
         <p>Ik ga deze webshop aan iedereen aanraden. Het is snel, makkelijk navigeerbaar.</p>
-        <p>Ik weer altijd waar ik ben en het heeft een groot assortiment aan producten.</p>
+        <p>Ik weet altijd waar ik ben en het heeft een groot assortiment aan toetsenbord.</p>
     </section>
 </article>
 <aside>
