heading aangepast voor andere bestand

--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Personalisering</title>
 </head>
 <body>
-<header>
+<h1>Personalisering</h1>
+<section>
     <h2>Personalisering</h2>
-    <nav>
-        <h3>Menu</h3>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
-            <li><a href="Personalisering.html">Personalisering</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <h3>Menu</h3>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="Producten.html">Producten</a></li>
+                <li><a href="Personalisering.html">Personalisering</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+            </ul>
+        </nav>
     </header>
+</section>
 </body>
 </html>
