--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Product</title>
 </head>
 <body>
 <h1>Producten</h1>
-<header>
+<section>
     <h2>Producten</h2>
-    <nav>
-        <h3>Menu</h3>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Producten.html">Producten</a></li>
-            <li><a href="Personalisering.html">Personalisering</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="FAQ.html">FAQ</a></li>
-        </ul>
-    </nav>
-</header>
-<p>Bedankt om deze webshop te kiezen. Om onze overzicht aan producten te zien klik dan <a href="Productoverzicht.html">hier</a> op</p>
+    <header>
+        <nav>
+            <h3>Menu</h3>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="Producten.html">Producten</a></li>
+                <li><a href="Personalisering.html">Personalisering</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
+</section>
+<main>
+    <section>
+        <h2>Overzicht</h2>
+        <section>
+            <h3>Membrane keyboards</h3>
+            <section>
+                <a href="productdetailpagina.html"><img src="../media/membrane%20keyboard%201_opt.jpg"
+                                                        alt="membrane_keyboard_1"></a>
+                <h4>product 1</h4>
+                <p> 19,99 euro</p>
+            </section>
+            <section>
+                <img src="../media/membrane%20keyboard%202_opt.jpg" alt="membrane_keyboard_2">
+                <h4>product 2</h4>
+            </section>
+        </section>
+        <section>
+            <h3>Mechanical keyboards</h3>
+            <section>
+                <img src="../media/mechanical%20keyboard%201_opt.png" alt="mechanical_keyboard_1">
+                <h4>product 1</h4>
+            </section>
+            <section>
+                <img src="../media/mechanical%20keyboard%202_opt.jpg" alt="mechanical_keyboard_2">
+                <h4>product 2</h4>
+            </section>
+        </section>
+        <section>
+            <h3>Gaming keyboards</h3>
+            <section>
+                <img src="../media/gaming%20keyboard%202%20_opt.jpg" alt="gaming_keyboard_1">
+                <h4>product 1</h4>
+            </section>
+            <section>
+                <img src="../media/Gaming%20Keyboard%20_opt.jpg" alt="gaming_keyboard_2">
+                <h4>product 2</h4>
+            </section>
+        </section>
+        <section>
+            <h3>filter</h3>
+            <p>filter komt hier</p>
+        </section>
+    </section>
+</main>
 </body>
 </html>
