--- a/examenproject/html/productdetailpagina.html
+++ b/examenproject/html/productdetailpagina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>productdetailpagina</title>
@@ -23,7 +23,6 @@
             <h3>hier bevindt u zich</h3>
             <ol>
                 <li><a href=Producten.html>Producten</a></li>
-                <li><a href="Productoverzicht.html">Product Overzicht</a></li>
                 <li><a href=productdetailpagina.html>productdetail</a></li>
             </ol>
         </section>
@@ -33,7 +32,7 @@
     <section>
         <h2>Product</h2>
         <section>
-            <img src="media/membrane%20keyboard%20.jpg" alt="product">
+            <img src="../media/membrane%20keyboard%20.jpg" alt="product">
             <h3>zwart membrane keyboard met RBG lights </h3>
             <p>19,99 euro</p>
         </section>
