--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    . N ars meps verhaart Meijer Negen negen e
     <title>Home</title>
 </head>
 <body>
@@ -33,25 +32,34 @@
     </header>
 </section>
 <main>
-    <h2>mijn product</h2>
-    <img src="media/toetsenbord_opt.jpg" alt="toetsenbord">
-    <p>Welkom op mijn webshop. Hier kunt u toetsenborden vinden van verschillende designs.</p>
+    <section>
+        <h2>mijn product</h2>
+        <img src="media/toetsenbord_opt.jpg" alt="toetsenbord">
+        <p>Welkom op mijn webshop. Hier kunt u toetsenborden vinden van verschillende designs.</p>
+    </section>
 </main>
 <article>
     <h2>getuigenissen</h2>
     <section>
         <h3>getuigenis 1</h3>
         <p>Voor ik deze webshop had gevonden had ik problemen met het zoeken naar een goede toetsenbord.</p>
-        <p>ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen gingen
+        <p>ik kocht elke keer een nieuw toetsenbord omdat het toetsenbord niet genoeg stevig was of de toetsen
+            gingen
             steeds eruit.</p>
-        <p>Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden en
+        <p>Maar dat werd allemaal opgelost toen ik deze webshop vond. Ik kon hier mijn gewenste toetsenbord vinden
+            en
             special voor mezelf personaliseren.</p>
-        <p></p>
+    </section>
+    <section>
         <h3>getuigenis 2</h3>
-        <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor mij kan
+        <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor
+            mij
+            kan
             vinden.</p>
         <p>Ik vond het ook handig dat ik het kon aanpassen aan mijn eigen stijl.</p>
         <p>En het is ook handig als je iemand een cadeau wilt geven</p>
+    </section>
+    <section>
         <h3>getuigenis 3</h3>
         <p>Ik ga deze webshop aan iedereen aanraden. Het is snel, makkelijk navigeerbaar.</p>
         <p>Ik weet altijd waar ik ben en het heeft een groot assortiment aan toetsenbord.</p>
@@ -64,6 +72,8 @@
         <p>Welkom op mijn webshop.</p>
         <p>Ik ben Muhammet Murat en volg de richting toegepaste informatica op KDG.</p>
         <p>Voor een project heb ik deze webshop.</p>
+    </section>
+    <section>
         <h3>waarom?</h3>
         <p>Ik heb als product toetsenbord gekozen omdat het iets is dat we elke dag gebruiken maar er niet echt bij
             still staan dat er verschillende soorten zijn met allemaal hun eigen functie.</p>
