m2: alt img aangepast en semantiek

--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -27,36 +27,35 @@
         <section>
             <h3>Membrane keyboards</h3>
             <section>
-                <a href="productdetailpagina.html"><img src="../media/membrane%20keyboard%201_opt.jpg"
-                                                        alt="membrane_keyboard_1"></a>
-                <h4>product 1</h4>
+                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg" alt="Membrane keyboard zwart met RBG lichten"></a>
+                <h4>Membrane keyboard zwart met RBG lichten</h4>
                 <p> 19,99 euro</p>
             </section>
             <section>
-                <img src="../media/membrane%20keyboard%202_opt.jpg" alt="membrane_keyboard_2">
-                <h4>product 2</h4>
+                <img src="../media/membraneKeyboard/RBGKeyboardWit.jpg" alt="Membrane keyboard wit met RBG lichten">
+                <h4>Membrane keyboard wit met RBG lichten</h4>
             </section>
         </section>
         <section>
             <h3>Mechanical keyboards</h3>
             <section>
-                <img src="../media/mechanical%20keyboard%201_opt.png" alt="mechanical_keyboard_1">
-                <h4>product 1</h4>
+                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg" alt="Compact mechanical keyboard zwart met blauwe lichten">
+                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
             </section>
             <section>
-                <img src="../media/mechanical%20keyboard%202_opt.jpg" alt="mechanical_keyboard_2">
-                <h4>product 2</h4>
+                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
+                <h4>Ergonomic keyboard groen</h4>
             </section>
         </section>
         <section>
             <h3>Gaming keyboards</h3>
             <section>
-                <img src="../media/gaming%20keyboard%202%20_opt.jpg" alt="gaming_keyboard_1">
-                <h4>product 1</h4>
+                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
+                <h4>Razer keyboard mini met RBG lichten</h4>
             </section>
             <section>
-                <img src="../media/Gaming%20Keyboard%20_opt.jpg" alt="gaming_keyboard_2">
-                <h4>product 2</h4>
+                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
+                <h4>Zwart gaming keyboard met rode lichten</h4>
             </section>
         </section>
         <section>
