--- a/examenproject/html/productdetailpagina.html
+++ b/examenproject/html/productdetailpagina.html
@@ -32,8 +32,8 @@
     <section>
         <h2>Product</h2>
         <section>
-            <img src="../media/membrane%20keyboard%20.jpg" alt="product">
-            <h3>zwart membrane keyboard met RBG lights </h3>
+            <img src="../media/membraneKeyboard/KeyboardRBG.jpg" alt="Membrane keyboard zwart met RBG lights">
+            <h3>Membrane keyboard zwart met RBG lights </h3>
             <p>19,99 euro</p>
         </section>
         <section>
