--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -34,7 +34,7 @@
 <main>
     <section>
         <h2>mijn product</h2>
-        <img src="media/toetsenbord_opt.jpg" alt="toetsenbord">
+        <img src="media/toetsenbord_opt.jpg" alt="Toetsenbord">
         <p>Welkom op mijn webshop. Hier kunt u toetsenborden vinden van verschillende designs.</p>
     </section>
     <section>
