--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -21,5 +21,39 @@
         </nav>
     </header>
 </section>
+<main>
+    <section>
+        <h1>vraag 1</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 2</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 3</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 4</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 5</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 6</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 7</h1>
+        <p></p>
+    </section>
+    <section>
+        <h1>vraag 8</h1>
+        <p></p>
+    </section>
+</main>
 </body>
 </html>
