--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -27,26 +27,93 @@
         <section>
             <h3>Membrane keyboards</h3>
             <section>
-                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg" alt="Membrane keyboard zwart met RBG lichten"></a>
+                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
+                                                        alt="Membrane keyboard zwart met RBG lichten"></a>
                 <h4>Membrane keyboard zwart met RBG lichten</h4>
                 <p> 19,99 euro</p>
             </section>
             <section>
+                <a href="RBGKeyboardWit.html"><img src="../media/membraneKeyboard/RBGKeyboardWit.jpg"
+                                                        alt="Membrane keyboard wit met RBG lichten"></a>
+                <h4>Membrane keyboard wit met RBG lichten</h4>
+                <p> 24,99 euro</p>
+            </section>
+
+            <section>
+                <a href="CompactZwartKeyboard.html"><img src="../media/membraneKeyboard/CompactZwartKeyboard.jpg"
+                                                        alt="Compact zwart Keyboard"></a>
+                <h4>Compact zwart Keyboard</h4>
+                <p> 10 euro</p>
+            </section>
+
+            <section>
+                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg" alt="Ergonomic zwart zwart keyboard"></a>
+                <h4>Ergonomic zwart zwart keyboard</h4>
+                <p> 19,99 euro</p>
+            </section>
+
+            <section>
+                <a href="TypeMachineStijlWitKeyboard.html"><img src="../media/membraneKeyboard/TypeMachineStijlWitKeyboard.jpg"
+                                                        alt="Type machine stijl wit keyboard"></a>
+                <h4>Type machine stijl wit keyboard</h4>
+                <p> 30 euro</p>
+            </section>
+
+            <section>
                 <img src="../media/membraneKeyboard/RBGKeyboardWit.jpg" alt="Membrane keyboard wit met RBG lichten">
                 <h4>Membrane keyboard wit met RBG lichten</h4>
             </section>
+
+            <section>
+                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
+                                                        alt="Membrane keyboard zwart met RBG lichten"></a>
+                <h4>Membrane keyboard zwart met RBG lichten</h4>
+                <p> 19,99 euro</p>
+            </section>
+
+            <section>
+                <img src="../media/membraneKeyboard/RBGKeyboardWit.jpg" alt="Membrane keyboard wit met RBG lichten">
+                <h4>Membrane keyboard wit met RBG lichten</h4>
+            </section>
+
         </section>
+
         <section>
             <h3>Mechanical keyboards</h3>
             <section>
-                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg" alt="Compact mechanical keyboard zwart met blauwe lichten">
+                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
+                     alt="Compact mechanical keyboard zwart met blauwe lichten">
                 <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
             </section>
             <section>
                 <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
                 <h4>Ergonomic keyboard groen</h4>
             </section>
+            <section>
+                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
+                     alt="Compact mechanical keyboard zwart met blauwe lichten">
+                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+            </section>
+            <section>
+                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
+                <h4>Ergonomic keyboard groen</h4>
+            </section>
+            <section>
+                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
+                     alt="Compact mechanical keyboard zwart met blauwe lichten">
+                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+            </section>
+            <section>
+                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
+                <h4>Ergonomic keyboard groen</h4>
+            </section>
+            <section>
+                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
+                     alt="Compact mechanical keyboard zwart met blauwe lichten">
+                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+            </section>
         </section>
+
         <section>
             <h3>Gaming keyboards</h3>
             <section>
@@ -57,7 +124,24 @@
                 <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
                 <h4>Zwart gaming keyboard met rode lichten</h4>
             </section>
+            <section>
+                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
+                <h4>Razer keyboard mini met RBG lichten</h4>
+            </section>
+            <section>
+                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
+                <h4>Zwart gaming keyboard met rode lichten</h4>
+            </section>
+            <section>
+                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
+                <h4>Razer keyboard mini met RBG lichten</h4>
+            </section>
+            <section>
+                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
+                <h4>Zwart gaming keyboard met rode lichten</h4>
+            </section>
         </section>
+
         <section>
             <h3>filter</h3>
             <p>filter komt hier</p>
