--- a/examenproject/html/ErgonomicZwartKeyboard.html
+++ b/examenproject/html/ErgonomicZwartKeyboard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>productdetailpagina</title>
+    <title>Productdetailpagina</title>
 </head>
 <body>
 <h1>productDetail</h1>
@@ -32,15 +32,14 @@
     <section>
         <h2>Product</h2>
         <section>
-            <img src="../media/membraneKeyboard/KeyboardRBGHD.jpg" alt="Membrane keyboard zwart met RBG lights">
-            <h3>Membrane keyboard zwart met RBG lights </h3>
+            <img src="../media/membraneKeyboard/ErgonomicZwartKeyboardHD.jpg" alt="Ergonomic zwart zwart keyboard">
+            <h3>Ergonomic zwart zwart keyboard </h3>
             <p>19,99 euro</p>
         </section>
         <section>
             <h3>Eigenschappen</h3>
-            <p>Stille keyboard. Maakt bijna geen geluid</p>
+            <p>Comfortable gebruik </p>
             <p>Met draad</p>
-            <p>Het is morsbestendig</p>
             <p>het is helemaal van plastic gemaakt</p>
             <p>lengte is 40 cm op 15cm </p>
         </section>
