alle producten toegevoegd

--- a/examenproject/html/CompactZwartKeyboard.html
+++ b/examenproject/html/CompactZwartKeyboard.html
@@ -41,6 +41,7 @@
             <p>lengte is 25 cm op 15cm</p>
             <p>Makkelijk mee te nemen </p>
             <p>het is helemaal van plastic gemaakt</p>
+            <p>Heeft multi media knoppen</p>
         </section>
     </section>
 </main>
