--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -47,8 +47,8 @@
             </section>
 
             <section>
-                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg" alt="Ergonomic zwart zwart keyboard"></a>
-                <h4>Ergonomic zwart zwart keyboard</h4>
+                <a href="ErgonomicZwartKeyboard.html"><img src="../media/membraneKeyboard/ErgonomicZwartKeyboard.jpg" alt="Ergonomic zwart keyboard"></a>
+                <h4>Ergonomic zwart keyboard</h4>
                 <p> 19,99 euro</p>
             </section>
 
@@ -60,20 +60,21 @@
             </section>
 
             <section>
-                <img src="../media/membraneKeyboard/RBGKeyboardWit.jpg" alt="Membrane keyboard wit met RBG lichten">
-                <h4>Membrane keyboard wit met RBG lichten</h4>
+                <img src="../media/membraneKeyboard/KeyboardMetTouchpad.jpg" alt="Keyboard Met Touchpad">
+                <h4>Keyboard Met Touchpad</h4>
+                <p>40 euro</p>
             </section>
 
             <section>
-                <a href="productdetailpagina.html"><img src="../media/membraneKeyboard/RBGKeyboardZwart.jpg"
-                                                        alt="Membrane keyboard zwart met RBG lichten"></a>
-                <h4>Membrane keyboard zwart met RBG lichten</h4>
-                <p> 19,99 euro</p>
+                <img src="../media/membraneKeyboard/OpvouwbaarKeyboard.jpg" alt="Opvouwbaar Keyboard">
+                <h4>Opvouwbaar keyboard</h4>
+                <p> 35 euro</p>
             </section>
 
             <section>
-                <img src="../media/membraneKeyboard/RBGKeyboardWit.jpg" alt="Membrane keyboard wit met RBG lichten">
-                <h4>Membrane keyboard wit met RBG lichten</h4>
+                <img src="../media/membraneKeyboard/SiliconeKeyboard.jpg" alt="Silicone Keyboard">
+                <h4>Silicone Keyboard</h4>
+                <p>4,99 euro</p>
             </section>
 
         </section>
@@ -84,33 +85,40 @@
                 <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
                      alt="Compact mechanical keyboard zwart met blauwe lichten">
                 <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+                <p>20 euro</p>
             </section>
             <section>
                 <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
                 <h4>Ergonomic keyboard groen</h4>
+                <p>13 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
-                     alt="Compact mechanical keyboard zwart met blauwe lichten">
-                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+                <img src="../media/mechanicalKeyboard/DraadlozeWitKeyboard.jpg"
+                     alt="Draadloze Wit Keyboard">
+                <h4>Draadloze Wit Keyboard</h4>
+                <p>21,99 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
-                <h4>Ergonomic keyboard groen</h4>
+                <img src="../media/mechanicalKeyboard/LogitechGWiKeyboard.png" alt="Logitech G Wit Keyboard">
+                <h4>Logitech G Wit Keyboard</h4>
+                <p>33 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
-                     alt="Compact mechanical keyboard zwart met blauwe lichten">
-                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+                <img src="../media/mechanicalKeyboard/MetaalZwartKeyboard.jpg"
+                     alt="Metaal Zwart Keyboard met lichten">
+                <h4>Metaal Zwart Keyboard met lichten</h4>
+                <p>50 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/ErgonomicKeyboardGroen.png" alt="Ergonomic keyboard groen">
-                <h4>Ergonomic keyboard groen</h4>
+                <img src="../media/mechanicalKeyboard/SuperComfortabelBlackErgonomicKeyboard.jpg" alt="Super comfortabel Black Ergonomic Keyboard">
+                <h4>Super comfortabel Black Ergonomic Keyboard</h4>
+                <p>20 euro</p>
             </section>
             <section>
-                <img src="../media/mechanicalKeyboard/CompactKeyboardBlauwEnZwart.jpg"
-                     alt="Compact mechanical keyboard zwart met blauwe lichten">
-                <h4>Compact mechanical keyboard zwart met blauwe lichten</h4>
+                <img src="../media/mechanicalKeyboard/professionalZwartKeyboard.jpg"
+                     alt="professional Zwart Keyboard">
+                <h4>Professional zwart keyboard</h4>
+                <p>30 euro</p>
             </section>
         </section>
 
@@ -119,26 +127,32 @@
             <section>
                 <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
                 <h4>Razer keyboard mini met RBG lichten</h4>
+                <p>15 euro</p>
             </section>
             <section>
                 <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
                 <h4>Zwart gaming keyboard met rode lichten</h4>
+                <p>22,99 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
-                <h4>Razer keyboard mini met RBG lichten</h4>
+                <img src="../media/gamingKeyboard/DraadlozeZwartBlauwKeyboard.jpg" alt="Draadloze Zwart Keyboard met blauw lichten">
+                <h4>Draadloze Zwart Keyboard met blauw lichten</h4>
+                <p>35 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
-                <h4>Zwart gaming keyboard met rode lichten</h4>
+                <img src="../media/gamingKeyboard/FullSizeGamingKeyboard.jpg" alt="Full Size Gaming Keyboard">
+                <h4>Full size gaming keyboard</h4>
+                <p>40 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/RazerKeyboardMini.jpg" alt=" Razer keyboard mini">
-                <h4>Razer keyboard mini met RBG lichten</h4>
+                <img src="../media/gamingKeyboard/MiniGamingKeyboardWit.png" alt=" Mini Gaming Keyboard Wit">
+                <h4>Mini Gaming Keyboard Wit</h4>
+                <p>10 euro</p>
             </section>
             <section>
-                <img src="../media/gamingKeyboard/ZwartEnRoodKeyboard.jpg" alt="Zwart gaming keyboard met rode lichten">
-                <h4>Zwart gaming keyboard met rode lichten</h4>
+                <img src="../media/gamingKeyboard/WitZwartRBGKeyboard.jpg" alt="Wit Zwart RBG Keyboard">
+                <h4>Wit en zwart RBG keyboard</h4>
+                <p>24,99 euro</p>
             </section>
         </section>
 
