--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -23,36 +23,53 @@
 </section>
 <main>
     <section>
-        <h1>vraag 1</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 2</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 3</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 4</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 5</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 6</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 7</h1>
-        <p></p>
-    </section>
-    <section>
-        <h1>vraag 8</h1>
-        <p></p>
+        <h2>Vragen</h2>
+        <dl>
+            <dt>Wat is een ergonomic keyboard?</dt>
+            <dd>Deze soort keyboards zijn gemaakt om nek en schouderklachten te voorkomen.
+                Het formaat is zo gemaakt zodat je schouder in een goede comfortzone werkt.
+            </dd>
+
+            <dt>Wat is een membrane keyboard?</dt>
+            <dd>Zoals de naam al zegt hebben deze keyboards een membrane.
+                Door deze membrane hangen de toetsen ook aan elkaar vast. Het voordeel van een
+                keyboard is dat ze stiller en goedkoper zijn.
+            </dd>
+
+            <dt>Wat is een mechanical keyboard?</dt>
+            <dd>Bij deze keyboards zijn alle toetsen individueel. Onder elke knop zit er een switch die registreert als
+                er een
+                knop wordt ingedrukt alvorens de toets de bodem raakt. Hierdoor kun je veel sneller typen.
+                Door de switches maakt een mechanical keyboard ook meer geluid.
+            </dd>
+
+            <dt>Wat is het verschil tussen en normaal keyboard en een gaming keyboard?</dt>
+            <dd>Gaming hebben extra features dan normale keyboards. Zoals RBG verlichten, media controls en extra
+                knoppen die programmeerbaar zijn.
+            </dd>
+
+            <dt>Welke keyboard is het beste om te gebruiken?</dt>
+            <dd>Dit hangt af van persoon tot persoon en waarvoor je het toetsenbord gaat gebruiken.
+                Als je het gaming gaat gebruiken zou ik natuurlijk de gaming keyboard en ook de mechanical aanraden.
+                Voor de dagelijks zou ik een ergonomic en membrane aanraden.
+            </dd>
+
+            <dt>Ik ben op een budget en wil een goede, maar ook een goedkope keyboard kopen. Welke zou ik moeten
+                kopen?
+            </dt>
+            <dd>Membrane keyboards zijn altijd de goedkoopste keyboards en ook goed.</dd>
+
+            <dt>Als er een knop op mijn keyboard kapot is kan ik die knop dan vervangen?</dt>
+            <dd>Alleen bij mechanical keyboards. Deze zijn knoppen zijn allemaal apart dus makkelijk te vervangen.
+                Bij membrane keyboards zitten ze aan elkaar vast dus moet het gehele keyboard vervangen worden.
+            </dd>
+
+            <dt>Zijn er veel voordelen van mechanical keyboards.</dt>
+            <dd>Ja, mechanical keyboards zijn veel sneller in het registeren.
+                Je kan de switches en knoppen vervangen als er eentje kapot gaat
+                en je kan de knoppen instellen als je dat wilt.
+            </dd>
+        </dl>
     </section>
 </main>
 </body>
