--- a/examenproject/html/Contact.html
+++ b/examenproject/html/Contact.html
@@ -38,10 +38,10 @@
         </section>
         <section>
             <h3>Adres</h3>
-            <p>Karel de grote hogeschool</p>
+            <p>Nationalestraat 5, 2000 Antwerpen</p>
+            <img src="../media/map.png" alt="Map">
         </section>
     </section>
-    <a href="https://www.google.be/maps/place/Karel+de+Grote+Hogeschool/@51.218153,4.3987142,17z/data=!3m1!4b1!4m5!3m4!1s0x47c3f6f6d16cb7fb:0xfc5f09fa2a5e0ae9!8m2!3d51.218153!4d4.4009029?hl=nl&authuser=0">map</a>
 </main>
 </body>
 </html>
