--- a/examenproject/html/Contact.html
+++ b/examenproject/html/Contact.html
@@ -39,9 +39,10 @@
         <section>
             <h3>Adres</h3>
             <p>Nationalestraat 5, 2000 Antwerpen</p>
-            <img src="../media/map.png" alt="Map">
+            <img src="../media/map.png" alt="map">
         </section>
     </section>
+
 </main>
 </body>
 </html>
