--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -23,7 +23,7 @@
 </section>
 <main>
     <section>
-        <h2>Vragen</h2>
+        <h2>8 meest gestelde vragen</h2>
         <dl>
             <dt>Wat is een ergonomic keyboard?</dt>
             <dd>Deze soort keyboards zijn gemaakt om nek en schouderklachten te voorkomen.
@@ -71,6 +71,7 @@
             </dd>
         </dl>
     </section>
+
 </main>
 </body>
 </html>
