--- a/examenproject/html/CompactZwartKeyboard.html
+++ b/examenproject/html/CompactZwartKeyboard.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Productdetailpagina</title>
 </head>
 <body>
-<h1>productDetail</h1>
+<h1>productDetail pagina</h1>
 <section>
-    <h2>ProductDetail</h2>
+    <h2>ProductDetail: CompactZwartKeyboard</h2>
     <header>
         <nav>
             <h3>Menu</h3>
