--- a/examenproject/html/FAQ.html
+++ b/examenproject/html/FAQ.html
@@ -5,7 +5,7 @@
     <title>FAQ</title>
 </head>
 <body>
-<h1>FAQ</h1>
+<h1>FAQ Pagina</h1>
 <section>
     <h2>FAQ</h2>
     <header>
@@ -38,8 +38,7 @@
 
             <dt>Wat is een mechanical keyboard?</dt>
             <dd>Bij deze keyboards zijn alle toetsen individueel. Onder elke knop zit er een switch die registreert als
-                er een
-                knop wordt ingedrukt alvorens de toets de bodem raakt. Hierdoor kun je veel sneller typen.
+                er een knop wordt ingedrukt alvorens de toets de bodem raakt. Hierdoor kun je veel sneller typen.
                 Door de switches maakt een mechanical keyboard ook meer geluid.
             </dd>
 
