--- a/examenproject/html/Personalisering.html
+++ b/examenproject/html/Personalisering.html
@@ -5,7 +5,7 @@
     <title>Personalisering</title>
 </head>
 <body>
-<h1>Personalisering</h1>
+<h1>Personalisering Pagina</h1>
 <section>
     <h2>Personalisering</h2>
     <header>
