--- a/examenproject/html/Producten.html
+++ b/examenproject/html/Producten.html
@@ -5,7 +5,7 @@
     <title>Product</title>
 </head>
 <body>
-<h1>Producten</h1>
+<h1>Producten Pagina</h1>
 <section>
     <h2>Producten</h2>
     <header>
@@ -157,7 +157,9 @@
         </section>
         <section>
             <h3>filter</h3>
-            <p>filter komt hier</p>
+            <p>Ergonomic keyboards</p>
+            <p>compact keyboards</p>
+            <p>RBG lichten</p>
         </section>
     </section>
 </main>
