--- a/examenproject/html/productdetailpagina.html
+++ b/examenproject/html/productdetailpagina.html
@@ -5,9 +5,9 @@
     <title>productdetailpagina</title>
 </head>
 <body>
-<h1>productDetail</h1>
+<h1>productDetail Pagina</h1>
 <section>
-    <h2>ProductDetail</h2>
+    <h2>ProductDetailRBGKeyboardZwart</h2>
     <header>
         <nav>
             <h3>Menu</h3>
@@ -37,6 +37,7 @@
             <p>19,99 euro</p>
         </section>
         <section>
+
             <h3>Eigenschappen</h3>
             <p>Stille keyboard. Maakt bijna geen geluid</p>
             <p>Met draad</p>
