--- a/examenproject/html/Contact.html
+++ b/examenproject/html/Contact.html
@@ -5,7 +5,7 @@
     <title>Contact</title>
 </head>
 <body>
-<h1>Contact</h1>
+<h1>Contact Pagina</h1>
 <section>
     <h2>Contact</h2>
     <header>
@@ -30,7 +30,7 @@
         </section>
         <section>
             <h3>Email</h3>
-            <p>muhammet.murat@student.kdg.be</p>
+            <a href="mailto:muhammet.murat@student.kdg.be">muhammet.murat@student.kdg.be</a>
         </section>
         <section>
             <h3>Telefoonnummer</h3>
