--- a/examenproject/index.html
+++ b/examenproject/index.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-<h1>Home</h1>
+<h1>Home Pagina</h1>
 <section>
     <h2>Home</h2>
     <header>
@@ -33,9 +33,9 @@
 </section>
 <main>
     <section>
-        <h2>mijn product</h2>
+        <h2><u>mijn product </u></h2>
         <img src="media/toetsenbord_opt.jpg" alt="Toetsenbord">
-        <p>Welkom op mijn webshop. Hier kunt u toetsenborden vinden van verschillende designs.</p>
+        <p><b>Welkom op mijn webshop.</b> Hier kunt u toetsenborden vinden van verschillende designs.</p>
     </section>
     <section>
         <h2>getuigenissen</h2>
@@ -51,10 +51,8 @@
         </section>
         <section>
             <h3>getuigenis 2</h3>
-            <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor
-                mij
-                kan
-                vinden.</p>
+            <p>Het beste vindt ik dat er verschillende toetsenborden zijn waardoor ik direct de perfecte product voor mij
+                kan vinden.</p>
             <p>Ik vond het ook handig dat ik het kon aanpassen aan mijn eigen stijl.</p>
             <p>En het is ook handig als je iemand een cadeau wilt geven</p>
         </section>
@@ -69,12 +67,12 @@
         <section>
             <h3>mezelf</h3>
             <p>Welkom op mijn webshop.</p>
-            <p>Ik ben Muhammet Murat en volg de richting toegepaste informatica op KDG.</p>
+            <p>Ik ben <strong>Muhammet Murat</strong> Murat en volg de richting toegepaste informatica op <i>KDG</i>.</p>
             <p>Voor een project heb ik deze webshop.</p>
         </section>
         <section>
             <h3>waarom?</h3>
-            <p>Ik heb als product toetsenbord gekozen omdat het iets is dat we elke dag gebruiken maar er niet echt bij
+            <p>Ik heb als product toetsenbord gekozen omdat het iets <br>is dat we elke dag gebruiken maar er niet echt bij
                 still staan dat er verschillende soorten zijn met allemaal hun eigen functie.</p>
         </section>
     </section>
